tests/lean/instance1.lean.expected.out
instance1.lean:6:24-10:0: error: fields missing: 'pure', 'bind'
